--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,3 +1,3 @@
-DATABASE_URL=hyperhire-backend-assessment.vercel.app
+DATABASE_URL=postgresql://categoriesdb_owner:5TC8eqjwkLbs@ep-bold-recipe-a5h6hpq9-pooler.us-east-2.aws.neon.tech/Menus?sslmode=require
 NODE_ENV=production
 PORT=3000
